// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders nothing if there are no selected criteria 1`] = `
<div
  className="cMTqqq"
/>
`;

exports[`renders the selected fair 1`] = `
<div
  className="cMTqqq"
>
  <div>
    <h2>
      Fair
    </h2>
    <div
      className="crrNnH"
    >
      FooFair
      <a
        className="remove"
        href="#"
        onClick={[Function]}
      >
        ✕
      </a>
    </div>
  </div>
</div>
`;

exports[`renders the selected genes 1`] = `
<div
  className="cMTqqq"
>
  <div>
    <h2>
      Genes
    </h2>
    <div
      className="crrNnH"
    >
      Foo
      <a
        className="remove"
        href="#"
        onClick={[Function]}
      >
        ✕
      </a>
    </div>
    <div
      className="crrNnH"
    >
      Bar
      <a
        className="remove"
        href="#"
        onClick={[Function]}
      >
        ✕
      </a>
    </div>
  </div>
</div>
`;

exports[`renders the selected partner 1`] = `
<div
  className="cMTqqq"
>
  <div>
    <h2>
      Partner
    </h2>
    <div
      className="crrNnH"
    >
      Gallery Foo
      <a
        className="remove"
        href="#"
        onClick={[Function]}
      >
        ✕
      </a>
    </div>
  </div>
</div>
`;

exports[`renders the selected tags 1`] = `
<div
  className="cMTqqq"
>
  <div>
    <h2>
      Tags
    </h2>
    <div
      className="crrNnH"
    >
      Foo
      <a
        className="remove"
        href="#"
        onClick={[Function]}
      >
        ✕
      </a>
    </div>
    <div
      className="crrNnH"
    >
      Bar
      <a
        className="remove"
        href="#"
        onClick={[Function]}
      >
        ✕
      </a>
    </div>
  </div>
</div>
`;
